stats text alignment corrected

--- a/game/HTML-JS/css/style.css
+++ b/game/HTML-JS/css/style.css
@@ -358,7 +358,7 @@ button{
   width: auto;
 }
 
-#tehteva{
+#tehtava{
   display: none;
   width: auto;
 }
